# snft-python-sdk

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: RELEASE.md
examples/: deploy-bot.metadata.json
src/snft_sdk/: __init__.py  protocol.py
tests/: test_protocol.py
