[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "notpunks-snft-sdk"
version = "0.1.1"
description = "Python helpers for sNFT Protocol agent runtimes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NOTPUNKS", email = "notpunksdev@gmail.com" }]
keywords = ["snft", "skill-nft", "ai-agent", "nft", "notpunks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://snft.notpunks.com"
Repository = "https://github.com/notpunksdev/snft-python-sdk"
Issues = "https://github.com/notpunksdev/snft-python-sdk/issues"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/snft_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["snft_sdk"]
